--- a/Main.ipynb
+++ b/Main.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d015ac49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bubble_sort(arr):\n",
+    "def bubble_sort(arr):# -> Any:\n",
     "    n = len(arr)\n",
     "    # Optimization flag to detect if array is already sorted\n",
     "    swapped = False\n",
